# crumbot

./: README.md
client/: README.md  config.py  config.toml  main.py  pyproject.toml  requirements.txt
client/command/: powershell.py  processor.py  system_prompt
client/command/skills/: browser.py
client/pipeline/: pipeline.py
client/src/: main.py
client/src/command/: __init__.py  processor.py  system_prompt
client/src/command/skills/: apps.py  display.py
client/src/config/: __init__.py  config.py  config.toml  logging_config.py
client/src/pipeline/: pipeline.py
client/src/stt/: stt.py
client/src/tts/: __init__.py  tts.py
client/src/utils/: audio.py
client/src/wakeword/: __init__.py  detector.py
client/src/wakeword/models/: crumbot.tflite  display.tflite
client/tts/: tts.py
client/voice_assistant/: display.py  pipeline.py
client/voice_assistant/command/: __init__.py  command.py  system_prompt
client/voice_assistant/command/scripts/: discord.ps1  minecraft.ps1
client/voice_assistant/command/skills/: apps.py  browser.py  display.py
client/voice_assistant/stt/: __init__.py
client/voice_assistant/wakeword/: __init__.py  wakeword.py
client/wakeword/models/: crumbot.onnx  display.onnx
